meets project requirements

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <p>This is a quick site I threw together to practice HTML pages and routing. It is nominally about <em>Star Trek: Deep Space Nine</em>.</p>
     <h2>So are you a fake fan?</h2>
     <p>No, I'm a real fan. It's just not a real fansite.</p>
+    <h2>Who are the best-dressed characters on the station?</h2>
+    <p><a href="/best-dressed">Glad you asked.</a></p>
+    <h2>Why aren't there any pictures?</h2>
+    <p>Because I didn't feel like working out licensing and fair use. If you want pictures, check out the <a href="http://memory-alpha.wikia.com/wiki/Star_Trek:_Deep_Space_Nine">Memory Alpha fan wiki</a>.
+    <h2>But why is the site so <em>ugly</em>?</h2>
+    <p>Because CSS is not a project requirement.</p>
   </body>
 </html>
