--- a/best-dressed/index.html
+++ b/best-dressed/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Best-Dressed DS9 Characters</h1>
     <p>In my opinion, these are the characters with the coolest outfits on the station.</p>
+    <a href="/">Home</a>
     <ul>
       <li><a href="/best-dressed/jake-sisko">Jake Sisko</a></li>
       <li><a href="/best-dressed/leeta">Leeta</a></li>
