added snacks bc I'm hungry

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <h2>Who are the best-dressed characters on the station?</h2>
     <p><a href="best-dressed">Glad you asked.</a></p>
     <h2>Why aren't there any pictures?</h2>
-    <p>Because I didn't feel like working out licensing and fair use. If you want pictures, check out the <a href="http://memory-alpha.wikia.com/wiki/Star_Trek:_Deep_Space_Nine">Memory Alpha fan wiki</a>.
+    <p>Because I didn't feel like working out licensing and fair use. If you want pictures, check out the <a href="http://memory-alpha.wikia.com/wiki/Star_Trek:_Deep_Space_Nine">Memory Alpha fan wiki</a>.</p>
     <h2>But why is the site so <em>ugly</em>?</h2>
     <p>Because CSS is not a project requirement.</p>
+    <h2>What are your favorite things to eat while watching DS9?</h2>
+    <p>Check out my <a href="/snacks">favorite TV snacks</a>.</p>
   </body>
 </html>
