forgot snacks index page

--- a/snacks/index.html
+++ b/snacks/index.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Best-Dressed DS9 Characters</title>
+    <title>Favorite Snacks</title>
   </head>
   <body>
-    <h1>Best-Dressed DS9 Characters</h1>
-    <p>In my opinion, these are the characters with the coolest outfits on the station.</p>
-    <a href="/">Home</a>
+    <h1>My favorite snacks for viewing DS9</h1>
+    <p>Chris makes great snacks.</p>
     <ul>
-      <li><a href="/best-dressed/jake-sisko">Jake Sisko</a></li>
-      <li><a href="/best-dressed/leeta">Leeta</a></li>
-      <li><a href="/best-dressed/kai-winn">Kai Winn</a></li>
+      <li><a href="/snacks/cheesy-popcorn">Cheesy Popcorn</a></li>
+      <li><a href="/snacks/nachos">Nachos</a></li>
+      <li><a href="/snacks/soylent">Soylent</a></li>
     </ul>
   </body>
 </html>
