--- a/best-dressed/jake-sisko/index.html
+++ b/best-dressed/jake-sisko/index.html
@@ -5,6 +5,7 @@
     <title>Jake Sisko</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <a href="/best-dressed">Best Dressed</a>  &gt; <strong>Jake Sisko</strong></p>
     <h1>Jake Sisko</h1>
     <p>I particularly like his teal jumpsuit in earlier seasons. And then he goes FULL NEWSIE.</p>
   </body>
