--- a/best-dressed/kai-winn/index.html
+++ b/best-dressed/kai-winn/index.html
@@ -5,6 +5,7 @@
     <title>Kai Winn</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <a href="/best-dressed">Best Dressed</a>  &gt; <strong>Kai Winn</strong></p>
     <h1>Kai Winn</h1>
     <p>Love to hate her, but that golden brocade outfit with the matching hat is pretty fancy.</p>
   </body>
