--- a/best-dressed/leeta/index.html
+++ b/best-dressed/leeta/index.html
@@ -5,6 +5,7 @@
     <title>Leeta</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <a href="/best-dressed">Best Dressed</a>  &gt; <strong>Leeta</strong></p>
     <h1>Leeta</h1>
     <p>Like the other Dabo girls, she wears the most risqué outfits on the station - and she wears them well.</p>
   </body>
