--- a/snacks/cheesy-popcorn/index.html
+++ b/snacks/cheesy-popcorn/index.html
@@ -5,6 +5,7 @@
     <title>Cheesy Popcorn</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <a href="/snacks">Snacks</a>  &gt; <strong>Cheesy Popcorn</strong></p>
     <h1>Cheesy Popcorn</h1>
     <p>Between a snack and a meal, this is a perfect blend of texture, taste, and substance.</p>
   </body>
