--- a/snacks/index.html
+++ b/snacks/index.html
@@ -5,6 +5,7 @@
     <title>Favorite Snacks</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <strong>Snacks</strong></p>
     <h1>My favorite snacks for viewing DS9</h1>
     <p>Chris makes great snacks.</p>
     <ul>
