--- a/snacks/nachos/index.html
+++ b/snacks/nachos/index.html
@@ -5,6 +5,7 @@
     <title>Nachos</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <a href="/snacks">Snacks</a>  &gt; <strong>Nachos</strong></p>
     <h1>Nachos</h1>
     <p>The ones with broccoli and onion are the best.</p>
   </body>
