--- a/snacks/soylent/index.html
+++ b/snacks/soylent/index.html
@@ -5,6 +5,7 @@
     <title>Soylent</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <a href="/snacks">Snacks</a>  &gt; <strong>Soylent</strong></p>
     <h1>Soylent</h1>
     <p>When I'm very hungry and need food fast.</p>
   </body>
