--- a/best-dressed/index.html
+++ b/best-dressed/index.html
@@ -5,9 +5,9 @@
     <title>Best-Dressed DS9 Characters</title>
   </head>
   <body>
+    <p><a href="/">Home</a>  &gt; <strong>Best Dressed</strong></p>
     <h1>Best-Dressed DS9 Characters</h1>
     <p>In my opinion, these are the characters with the coolest outfits on the station.</p>
-    <a href="/">Home</a>
     <ul>
       <li><a href="/best-dressed/jake-sisko">Jake Sisko</a></li>
       <li><a href="/best-dressed/leeta">Leeta</a></li>
