--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>So are you a fake fan?</h2>
     <p>No, I'm a real fan. It's just not a real fansite.</p>
     <h2>Who are the best-dressed characters on the station?</h2>
-    <p><a href="best-dressed">Glad you asked.</a></p>
+    <p><a href="/best-dressed">Glad you asked.</a></p>
     <h2>Why aren't there any pictures?</h2>
     <p>Because I didn't feel like working out licensing and fair use. If you want pictures, check out the <a href="http://memory-alpha.wikia.com/wiki/Star_Trek:_Deep_Space_Nine">Memory Alpha fan wiki</a>.</p>
     <h2>But why is the site so <em>ugly</em>?</h2>
